--- a/DPO2_U2_A3_RARP/src/interfaces/Exit.form
+++ b/DPO2_U2_A3_RARP/src/interfaces/Exit.form
@@ -77,7 +77,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnExit">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Exit"/>
+        <Property name="text" type="java.lang.String" value="Salir"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExitActionPerformed"/>
