--- a/DPO2_U2_A4_RARP/src/interfaces/InventarioBajas.form
+++ b/DPO2_U2_A4_RARP/src/interfaces/InventarioBajas.form
@@ -513,6 +513,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Eliminar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEliminarActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnSalir">
               <Properties>
