--- a/DPO2_U2_A4_RARP/src/interfaces/InventarioAltas.form
+++ b/DPO2_U2_A4_RARP/src/interfaces/InventarioAltas.form
@@ -507,6 +507,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Limpiar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnlimpiarActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnSalir">
               <Properties>
